<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <ToggleButton
        android:id="@+id/traverse_switch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/title_primary"
        android:textSize="12sp"
        android:checked="true"
        android:layout_marginBottom="5dp"
        android:textOff="@string/survey_vertical_anticlockwise"
        android:textOn="@string/survey_vertical_clockwise"/>
    <TextView
        android:text="@string/survey_vertical_left"
        style="@style/AppTheme.BannerTitle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/survey_vertical_read"
            style="@style/AppTheme.TextView"/>
        <EditText
            android:id="@+id/angle_left_du"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="numberSigned"
            android:ems="10"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_du"/>
        <EditText
            android:id="@+id/angle_left_fen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_fen"/>
        <EditText
            android:id="@+id/angle_left_miao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_miao"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/survey_result"
            style="@style/AppTheme.ResultText"/>
        <TextView
            android:id="@+id/angle_result_left"
            style="@style/AppTheme.TextView"/>
    </LinearLayout>
    <TextView
        android:text="@string/survey_vertical_right"
        style="@style/AppTheme.BannerTitle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/survey_vertical_read"
            style="@style/AppTheme.TextView"/>
        <EditText
            android:id="@+id/angle_right_du"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="numberSigned"
            android:ems="10"
            android:layout_weight="1"
            android:imeOptions="actionNext" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_du"/>
        <EditText
            android:id="@+id/angle_right_fen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="1"
            android:imeOptions="actionNext" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_fen"/>
        <EditText
            android:id="@+id/angle_right_miao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_miao"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/survey_result"
            style="@style/AppTheme.ResultText"/>
        <TextView
            android:id="@+id/angle_result_right"
            style="@style/AppTheme.TextView"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_reset"
            android:text="@string/btn_reset"
            style="@style/AppTheme.Button"/>
        <Button
            android:id="@+id/btn_calc"
            android:text="@string/btn_calc"
            style="@style/AppTheme.Button"/>
    </LinearLayout>

    <TextView
        android:id="@+id/result_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/result_different"
        style="@style/AppTheme.TextView"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/result_arg"
        style="@style/AppTheme.TextView"
        android:layout_gravity="center"/>

</LinearLayout>
</ScrollView>